started function to explode letters

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>WEBSITE OF HATE</title>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="js/hate.js"></script>
+  <link rel="stylesheet" href="css/hate.css">
 </head>
 <body>
   <p>Drag this to your bookmarks bar and click it when a site shits you: 
