ok - back to original project, been talked out of this one

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>WEBSITE OF HATE</title>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="js/hate.js"></script>
+  <!--<script src="js/hate.js"></script>-->
   <link rel="stylesheet" href="css/hate.css">
 </head>
 <body>
